[package]
name = "advent-of-code-2025"
version = "0.1.0"
edition = "2024"

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
# aoc-runner = { git = "https://github.com/pedantic79/cargo-aoc.git", branch = "new-criterion", package = "aoc-runner" }
# aoc-runner-derive = { git = "https://github.com/pedantic79/cargo-aoc.git", branch = "new-criterion", package = "aoc-runner-derive" }
nom = "8"
num = "0.4"
itertools = "0.14.0"
rayon = "1"
pathfinding = "4.14.0"
nohash-hasher = "0.2"
rustc-hash = "2"
ahash = "0.8"
arrayvec = "0.7"
stable-pattern = "0.1"
once_cell = "1"
scanf = "2"
bit-set = "0.8"
lazy_static = "1"
bitvec = "1"
smallstr = "0.3.0"
polyfit-rs = "0.2.1"
petgraph = "0.8"
regex = "1"
statistical = "1.0.0"
aho-corasick = "1.1.3"
dashmap = { version = "6.1.0", features = ["inline", "rayon"] }
geo = "0.32.0"

[profile.release]
lto = "thin"
panic = "abort"
